tests/ui/span/issue-42234-unknown-receiver-type.full.stderr
error[E0599]: no method named `method_that_could_exist_on_some_type` found for type `_` in the current scope
  --> $DIR/issue-42234-unknown-receiver-type.rs:10:16
   |
LL |     x.unwrap().method_that_could_exist_on_some_type();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `_`

error[E0282]: type annotations needed
  --> $DIR/issue-42234-unknown-receiver-type.rs:16:10
   |
LL |         .sum::<_>()
   |          ^^^ cannot infer type of the type parameter `S` declared on the method `sum`
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0282`.
